Add support for querying todos by type
